...
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/IBfoodtop"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:layout_alignTop="@+id/IBfoodbottom"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.41"
...
